@@ -6,8 +6,10 @@ PCRE - Perl-compatible regular expressions
 .sp
 The PCRE library is a set of functions that implement regular expression
 pattern matching using the same syntax and semantics as Perl, with just a few
-differences. (Certain features that appeared in Python and PCRE before they
-appeared in Perl are also available using the Python syntax.)
+differences. Certain features that appeared in Python and PCRE before they
+appeared in Perl are also available using the Python syntax. There is also some 
+support for certain .NET and Oniguruma syntax items, and there is an option for 
+requesting some minor changes that give better JavaScript compatibility.
 .P
 The current implementation of PCRE (release 7.x) corresponds approximately with
 Perl 5.10, including support for UTF-8 encoded strings and Unicode general
@@ -287,6 +289,6 @@ two digits 10, at the domain cam.ac.uk.
 .rs
 .sp
 .nf
-Last updated: 09 August 2007
-Copyright (c) 1997-2007 University of Cambridge.
+Last updated: 12 April 2008
+Copyright (c) 1997-2008 University of Cambridge.
 .fi
